// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render MovieDetailsPage component render <View Info> button clicks correctly 1`] = `
<section
  className="movieDetails"
>
  <figure
    className="inHeroSection"
  >
    <img
      alt="test title"
      src="https://image.tmdb.org/t/p/original/path"
    />
  </figure>
  <div
    className="movieInfo"
  >
    <div
      className="movieInfo__left"
    >
      <h1
        className="primary"
      >
        test title
      </h1>
      <div
        className="movieSubInfo"
      >
        <ul
          className="primary"
          style={
            Object {
              "order": null,
            }
          }
        >
          <li>
            Action
          </li>
        </ul>
        <span
          className="runtime"
        >
          1h 40m
        </span>
      </div>
      <div
        className="rating"
      >
        <span
          className="stars"
          style={
            Object {
              "width": "52em",
            }
          }
        />
        <span
          className="primary"
        >
          5
        </span>
      </div>
    </div>
    <p
      className="primary active"
    >
      <span>
        test overview
      </span>
    </p>
    <div
      className="movieInfo__right"
    >
      <button
        className="secondary"
        data-text="Watch Now"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
      <button
        className="secondary"
        data-text="View Info"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
  </div>
</section>
`;

exports[`render MovieDetailsPage component render correctly 1`] = `
<section
  className="movieDetails"
>
  <figure
    className="inHeroSection"
  >
    <img
      alt="test title"
      src="https://image.tmdb.org/t/p/original/path"
    />
  </figure>
  <div
    className="movieInfo"
  >
    <div
      className="movieInfo__left"
    >
      <h1
        className="primary"
      >
        test title
      </h1>
      <div
        className="movieSubInfo"
      >
        <ul
          className="primary"
          style={
            Object {
              "order": null,
            }
          }
        >
          <li>
            Action
          </li>
        </ul>
        <span
          className="runtime"
        >
          1h 40m
        </span>
      </div>
      <div
        className="rating"
      >
        <span
          className="stars"
          style={
            Object {
              "width": "52em",
            }
          }
        />
        <span
          className="primary"
        >
          5
        </span>
      </div>
    </div>
    <p
      className="primary"
    >
      <span>
        test overview
      </span>
    </p>
    <div
      className="movieInfo__right"
    >
      <button
        className="secondary"
        data-text="Watch Now"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
      <button
        className="secondary"
        data-text="View Info"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
  </div>
</section>
`;
